scoring/errlog/12.log
./scoring/source/12.cpp:1:1: error: unknown type name 'dsfa'
dsfa
^
./scoring/source/12.cpp:1:5: error: expected unqualified-id
dsfa
    ^
2 errors generated.
